Update myStyle - Accessibility.css

--- a/styles/myStyle - Accessibility.css
+++ b/styles/myStyle - Accessibility.css
@@ -1017,6 +1017,7 @@ ul.icon_game_grid li a{         /*להוריד את הקו מהכתב בעוגנ
     height: 330px;
     background-color: black;
     border:0.5px solid white;
+    margin-top:80px;
 }
 
 
