--- a/styles/myStyle.css
+++ b/styles/myStyle.css
@@ -878,7 +878,7 @@ ul.icon_game_grid li a{         /*להוריד את הקו מהכתב בעוגנ
     padding-right: 60px;
 }
 
-.br_a_tizer{                     /המרחק של הקישור מהטיזר בדף הפנימי/
+.br_a_tizer{                     
     margin-top:18px;
 }
 /*-------------אלרגנים-----------------------*/
